refactor: option cascade 설정에 맞춰, create, update 문 수정