@@ -4,21 +4,21 @@ import gift.category.domain.Category;
 import gift.category.repository.CategoryRepository;
 import gift.product.option.domain.Option;
 import gift.product.option.domain.OptionDTO;
-import gift.product.option.repository.OptionRepository;
 import gift.product.option.service.OptionService;
 import gift.product.domain.Product;
 import gift.product.domain.ProductDTO;
 import gift.product.repository.ProductRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Validated
@@ -26,15 +26,13 @@ public class ProductService {
 
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
-    private final OptionRepository optionRepository;
     private final OptionService optionService;
 
     public ProductService(ProductRepository productRepository,
         CategoryRepository categoryRepository,
-        OptionRepository optionRepository, OptionService optionService) {
+        OptionService optionService) {
         this.productRepository = productRepository;
         this.categoryRepository = categoryRepository;
-        this.optionRepository = optionRepository;
         this.optionService = optionService;
     }
 
@@ -43,7 +41,7 @@ public class ProductService {
             .map(this::convertToDTO);
     }
 
-    public Page<ProductDTO> getAllProductsByCategoryId(Long categoryId, Pageable pageable){
+    public Page<ProductDTO> getAllProductsByCategoryId(Long categoryId, Pageable pageable) {
         return productRepository.getProductsByCategoryId(categoryId, pageable)
             .map(this::convertToDTO);
     }
@@ -51,7 +49,7 @@ public class ProductService {
     public List<ProductDTO> getAllProducts() {
         return productRepository.findAll().stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public Optional<ProductDTO> getProductDTOById(Long id) {
@@ -59,43 +57,76 @@ public class ProductService {
             .map(this::convertToDTO);
     }
 
-    public Optional<Product> getProductById(Long id){
-        return productRepository.findById((id));
+    public Optional<Product> getProductById(Long id) {
+        return productRepository.findById(id);
     }
 
+    @Transactional
     public ProductDTO createProduct(@Valid ProductDTO productDTO) {
-        Product product = convertToEntityWithoutOptions(productDTO);
+        Category category = categoryRepository.findById(productDTO.getCategoryId())
+            .orElseThrow(() -> new EntityNotFoundException("Category id " + productDTO.getCategoryId() + "가 없습니다."));
+
+        Product product = new Product();
+        product.setName(productDTO.getName());
+        product.setPrice(productDTO.getPrice());
+        product.setImageUrl(productDTO.getImageUrl());
+        product.setCategory(category);
+        if(productDTO.getOptionDTOList().size()>0){
+            Option tempOption = new Option("tempOption", 1L);
+            product.addOption(tempOption);
+        }
         product = productRepository.save(product);
 
-        Long productId = product.getId();
+        product.getOptionList().clear();
+        final Long productId = product.getId();
         productDTO.getOptionDTOList().forEach(optionDTO -> optionDTO.setProductId(productId));
 
-        return updateProduct(product.getId(), productDTO);
+        final Product finalProduct = product;
+        productDTO.getOptionDTOList().forEach(optionDTO -> {
+            Option option = optionService.convertToEntity(optionDTO);
+            option.setProduct(finalProduct);
+            finalProduct.addOption(option);
+        });
+
+        product = productRepository.save(finalProduct);
+
+        return convertToDTO(product);
     }
 
+    @Transactional
     public ProductDTO updateProduct(Long id, @Valid ProductDTO productDTO) {
-        System.out.println("update");
         Category category = categoryRepository.findById(productDTO.getCategoryId())
             .orElseThrow(() -> new EntityNotFoundException("Category id " + productDTO.getCategoryId() + "가 없습니다."));
 
         Product product = productRepository.findById(id)
             .orElseThrow(() -> new EntityNotFoundException("Product id " + id + "가 없습니다."));
 
+        productDTO.getOptionDTOList().forEach(optionDTO -> optionDTO.setProductId(id));
+
         product.setName(productDTO.getName());
         product.setPrice(productDTO.getPrice());
         product.setImageUrl(productDTO.getImageUrl());
         product.setCategory(category);
 
-        productDTO.getOptionDTOList().forEach(optionDTO -> optionDTO.setProductId(id));
+        final Product finalProduct = product;
+        List<Option> existingOptions = product.getOptionList();
 
-        List<Option> optionList = productDTO.getOptionDTOList().stream()
-            .map(optionService::convertToEntity)
-            .peek(option -> option.setProduct(product))
-            .toList();
+        productDTO.getOptionDTOList().forEach(optionDTO -> {
+            Option existingOption = existingOptions.stream()
+                .filter(option -> option.getName().equals(optionDTO.getName()))
+                .findFirst()
+                .orElse(null);
 
-        product.getOptionList().clear();
-        product.getOptionList().addAll(optionList);
-        productRepository.save(product);
+            if (existingOption != null) {
+                optionService.updateOption(id, existingOption.getId(), optionDTO);
+            } else {
+                Option newOption = optionService.convertToEntity(optionDTO);
+                newOption.setProduct(finalProduct);
+                finalProduct.addOption(newOption);
+            }
+        });
+
+        product = productRepository.save(product);
         return convertToDTO(product);
     }
 
@@ -116,21 +147,6 @@ public class ProductService {
     }
 
     private Product convertToEntity(ProductDTO productDTO) {
-        Category category = categoryRepository.findById(productDTO.getCategoryId()).get();
-
-        Product product = new Product();
-        product.setName(productDTO.getName());
-        product.setPrice(productDTO.getPrice());
-        product.setImageUrl(productDTO.getImageUrl());
-        product.setCategory(category);
-
-        List<Option> optionList = productDTO.getOptionDTOList().stream()
-            .map(optionService::convertToEntity)
-            .toList();
-        product.setOptionList(optionList);
-        return product;
-    }
-    private Product convertToEntityWithoutOptions(ProductDTO productDTO) {
         Category category = categoryRepository.findById(productDTO.getCategoryId())
             .orElseThrow(() -> new EntityNotFoundException("Category id " + productDTO.getCategoryId() + "가 없습니다."));
 
@@ -140,18 +156,11 @@ public class ProductService {
         product.setImageUrl(productDTO.getImageUrl());
         product.setCategory(category);
 
-        List<Option> optionList = new ArrayList<>();
-        optionList.add(new Option("temp", 1L));
-        product.setOptionList(optionList);
+        productDTO.getOptionDTOList().forEach(optionDTO -> {
+            Option option = optionService.convertToEntity(optionDTO);
+            product.addOption(option);
+        });
+
         return product;
-    }
-    private Option convertToOptionEntity(OptionDTO optionDTO, Long productId) {
-        Option option = new Option(optionDTO.getName(), optionDTO.getQuantity());
-
-        Product product = new Product();
-        product.setId(productId);
-        option.setProduct(product);
-
-        return option;
     }
 }
